# generic_netlink_example

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  processor.cpp  processor.h
src/interface-lib/: CMakeLists.txt  abstractinterface.h  clientinterface.cpp  clientinterface.h  clientinterfaceprivate.h
src/server/: CMakeLists.txt  main.cpp
